--- a/website/templates/create-stat.html
+++ b/website/templates/create-stat.html
@@ -7,12 +7,22 @@
 {% block body %}
 <div class="flex">
 	<div class="flex vertical start" x-data="main">
-		<h1>Create Ability Score</h1>
+		{% if score %}
+			<h1>Edit {{ score.name }}</h1>
+			<template x-init="name=`{{ score.name }}`; abbr=`{{ score.abbr }}`; order=`{{ score.order }}`; text=`{{ score.text }}`"></template>
+		{% else %}
+			<h1>Create Ability Score</h1>
+		{% endif %}
 		<form class="interior flex vertical start" method="post">
 			<input name="name" id="name" x-model="name" placeholder="Ability Score Name">
 			<input name="abbr" id="abbr" x-model="abbr" placeholder="Ability Score Abbreviation">
+			<input name="order" id="order" x-model="order" placeholder="Order (What Position it will appear in on the list of Ability Scores)">
 			<textarea name="text" id="text" x-model="text" placeholder="Ability Score Description"></textarea>
-			<a><button type="submit">Create Ability Score!</button></a>
+			{% if score %}
+				<a><button type="submit">Submit Changes</button></a>
+			{% else %}
+				<a><button type="submit">Create Ability Score!</button></a>
+			{% endif %}
 		</form>
 		<h2 x-text="name + ' (' + abbr + ')'"></h2>
 		<hr>
