--- a/website/templates/stats.html
+++ b/website/templates/stats.html
@@ -8,9 +8,16 @@
 <div class="flex">
 	<div class="flex vertical start" x-data="main">
 		<h1>Ability Scores</h1>
-		{% for score in cruleset.ability_scores %}
+		{% for score in scores %}
 		<div class="usercontent">
-			<h2>{{ score.name + ' (' + score.abbr + ')' }}</h2>
+			<h2 style="width: auto; padding: auto">{{ score.name + ' (' + score.abbr + ')' }}</h2>
+			{% if cruleset.userid == current_user.id %}
+				<div>
+					<a href="/Character/Ability-Scores/Edit/{{ score.name.replace(' ', '-') }}"><button style="width: auto">Edit {{ score.name }}</button></a>
+					<a href="/Character/Ability-Scores/Delete/{{ score.name.replace(' ', '-') }}"><button class="mild danger" style="width: auto">Delete {{ score.name }}</button></a>
+				</div>
+			{% endif %}
+			<hr>
 			<div x-html="convert(`{{ score.text }}`)"></div>
 		</div>
 		{% endfor %}
